added todays missions, which lists all the todos, you have for today, but margintobaseline broke for some reason, it might have been broken, the whole time and i didnt notice

--- a/app/views/timeblocks/_timeblock.html.erb
+++ b/app/views/timeblocks/_timeblock.html.erb
@@ -28,5 +28,7 @@
     <% end %>
   </div>
 <% else %>
-  <p>Fehlende Daten: @minutes oder @marginToBaseline ist nil</p>
+  <p><%= timeblock.task_name%></p>
+  <p><%= timeblock.taskStartingTime %></p>
+  <p><%= timeblock.taskEndingTime %></p>
 <% end %>
