--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,8 +1,9 @@
-<%= link_to "Timeblocks", timeblocks_path %>
 <%= link_to "Home", root_path %>
 <% if user_signed_in? %>
     <%= link_to "Sign Out", destroy_user_session_path, method: :delete%>
     <%= link_to "Edit Profile", edit_user_registration_path%>
+    <%= link_to "Timeblocks", timeblocks_path %>
+    <%= link_to "Todays Mission", home_todays_mission_path %>
 <% else %>
     <%= link_to "Sign In", new_user_session_path %>
     <%= link_to "Register", new_user_registration_path %>
