added a many to many relation between timeblocks and journeys

--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -4,6 +4,8 @@
     <%= link_to "Edit Profile", edit_user_registration_path%>
     <%= link_to "Timeblocks", timeblocks_path %>
     <%= link_to "Todays Mission", home_todays_mission_path %>
+    <%= link_to "My Journeys", journeys_path %>
+
 <% else %>
     <%= link_to "Sign In", new_user_session_path %>
     <%= link_to "Register", new_user_registration_path %>
