--- a/app/views/journeys/index.html.erb
+++ b/app/views/journeys/index.html.erb
@@ -4,11 +4,10 @@
 
 <div id="journeys">
   <% @journeys.each do |journey| %>
-    <%= render journey %>
-    <p>
-      <%= link_to "Show this journey", journey %>
-    </p>
+    <%= render partial: "journey", locals: { journey: journey } %>
+    
   <% end %>
+  
 </div>
 
 <%= link_to "New journey", new_journey_path %>
