--- a/app/views/timeblocks/index.html.erb
+++ b/app/views/timeblocks/index.html.erb
@@ -1,30 +1,40 @@
 <head>
   <style>
-    .grid-container {
+    .container {
+      display: flex;
+      align-items: start; /* Stellt sicher, dass die Timeline und der Restinhalt oben ausgerichtet sind */
+    }
+
+    .timeline {
       display: grid;
-      grid-template-columns: repeat(7, 1fr);
       grid-template-rows: repeat(24, 1fr);
-      position: relative; /* Wichtig für die Überlagerung */
-      margin: 0 100px;
+      width: 48px;
+      background-color: red; /* Optional: zur besseren Sichtbarkeit */
+    }
+
+    .timeline-item {
+      width: 100%;
+      height: 60px;
+      text-align: center;
+      line-height: 60px; /* Vertikale Zentrierung */
+      border-bottom: 1px solid #ccc;
+    }
+
+    .content {
+      flex-grow: 1; /* Der Restinhalt nimmt den verbleibenden Platz ein */
     }
 
     .weekdays-navbar-container {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
-      margin: 0 100px;
-      border-bottom: 1px solid #ccc
+      border-bottom: 1px solid #ccc;
     }
-    .timeblock-grid-container {
+
+    .grid-container {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
-      width: 100%; /* 100% Breite minus 2x 100px padding */
-      padding: 0 100px; /* 100px Padding auf beiden Seiten */
-      box-sizing: border-box; /* Inklusive Padding in der Breitenberechnung */
-      position: absolute;
-      margin-top: 86px;
-      top: 0;
-      left: 0;
-      z-index: 10;
+      grid-template-rows: repeat(24, 1fr);
+      position: relative;
     }
 
     .grid-item {
@@ -33,46 +43,66 @@
       padding: 29.5px;
       text-align: center;
     }
+
+    .timeblock-grid-container {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 10;
+    }
   </style>
 </head>
 
 <div id="timeblocks">
   <%= link_to "New timeblock", new_timeblock_path %>
-
-  <div class="weekdays-navbar-container">
-    <p>Mon</p>
-    <p>Tue</p>
-    <p>Wed</p>
-    <p>Thu</p>
-    <p>Fri</p>
-    <p>Sat</p>
-    <p>Sun</p>
-  </div>
-
-  <div class="grid-container">
-    <% (0..6).each do |day| %>
+  <div class="container">
+    <div class="timeline">
       <% (0..23).each do |hour| %>
-        <div class="grid-item"></div>
+      <div class="timeline-item">
+        <%= hour < 10 ? "0" : "" %><%= hour %>:00
+      </div>
       <% end %>
-    <% end %>
-  </div>
+    </div>
 
-  <div class="timeblock-grid-container">
-    <% (0..6).each do |day| %>
-      <div>
-        <% @timeblocks.each do |timeblock| %>
-          <% if timeblock.user == current_user %>
-            <% if timeblock.repeatOnDay == day || timeblock.dailyRepeat == true %>
-              <div style="margin-top: <%= calculate_margin_to_baseline(@smallestValueInArray, timeblock.taskStartingTime) %>px">
-                <%= render timeblock %>
-              </div>
-            <% else %>
-              <%= "" %>
-            <% end %>
-          <% end %>
+    <div class="content">
+      <div class="weekdays-navbar-container">
+        <p>Mon</p>
+        <p>Tue</p>
+        <p>Wed</p>
+        <p>Thu</p>
+        <p>Fri</p>
+        <p>Sat</p>
+        <p>Sun</p>
+      </div>
 
+      <div class="grid-container">
+        <% (0..6).each do |day| %>
+        <% (0..23).each do |hour| %>
+        <div class="grid-item"></div>
+        <% end %>
         <% end %>
       </div>
-    <% end %>
+
+      <div class="timeblock-grid-container">
+        <% (0..6).each do |day| %>
+        <div>
+          <% @timeblocks.each do |timeblock| %>
+          <% if timeblock.user == current_user %>
+          <% if timeblock.repeatOnDay == day || timeblock.dailyRepeat == true %>
+          <div style="margin-top: <%= calculate_margin_to_baseline(@smallestValueInArray, timeblock.taskStartingTime) %>px">
+            <%= render timeblock %>
+          </div>
+          <% else %>
+          <%= "" %>
+          <% end %>
+          <% end %>
+          <% end %>
+        </div>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
