--- a/app/views/timeblocks/index.html.erb
+++ b/app/views/timeblocks/index.html.erb
@@ -4,22 +4,36 @@
       display: flex;
       align-items: start; /* Stellt sicher, dass die Timeline und der Restinhalt oben ausgerichtet sind */
     }
-
+    
     .timeline {
+      display: flex;
+      gap: 4px;
+    }
+
+    .timeline-hours-container {
+      display: inline;
+    }
+    .timeline-hours {
       display: grid;
       grid-template-rows: repeat(24, 1fr);
       width: 48px;
-      background-color: red; /* Optional: zur besseren Sichtbarkeit */
+      margin-top: 89px;
     }
 
     .timeline-item {
       width: 100%;
-      height: 60px;
       text-align: center;
-      line-height: 60px; /* Vertikale Zentrierung */
-      border-bottom: 1px solid #ccc;
+      height: 60px;
     }
-
+    .small-line {
+      height: 1px; 
+      background-color: #D4CBD0; 
+      margin-bottom: 29px;
+    }
+    .lines-container {
+      width: 16px;
+      margin-top: 98px;
+    }
     .content {
       flex-grow: 1; /* Der Restinhalt nimmt den verbleibenden Platz ein */
     }
@@ -27,9 +41,15 @@
     .weekdays-navbar-container {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid #D4CBD0;
     }
+    .weekday-item {
 
+      text-align: center;
+      border-left: 1px solid #D4CBD0;
+      padding: 16px 0px;
+    }
+    
     .grid-container {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
@@ -38,8 +58,8 @@
     }
 
     .grid-item {
-      border-left: 1px solid #ccc;
-      border-bottom: 1px solid #ccc;
+      border-left: 1px solid #D4CBD0;
+      border-bottom: 1px solid #D4CBD0;
       padding: 29.5px;
       text-align: center;
     }
@@ -47,35 +67,99 @@
     .timeblock-grid-container {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
-      width: 100%;
+      /*100% bildbreite - padding * 2 - 68px von timelines*/
+      width: calc(100% - 256px - 68px);
+      margin-left: 195px;
+      margin-top: 278px;
       position: absolute;
       top: 0;
       left: 0;
       z-index: 10;
     }
+
+    .create-timeblock-button{
+      font-size: 18px;
+      text-decoration: none; 
+      padding: 8px 24px;
+      border: none;
+      border-radius: 888px;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      background-color: #615654;
+      margin-bottom: 32px;
+
+    }
+    .container{
+      padding: 64px 128px;
+      background-color: #E5DCE1;
+      display:flex;
+      flex-direction: column;
+
+    }
+    .calender-container{
+      display:flex;
+      width:100%;
+    }
+    .date-active{ 
+      font-size: 30px;
+      color: #D4CBD0;
+      background-color: #1E4EB0;
+      padding: 6px 8px;
+      border-radius: 999px;
+      margin-top: 2px;
+    }
+    .date-active-container{
+      width: 100%;
+      display: flex;
+      justify-content: center; 
+    }
   </style>
 </head>
 
 <div id="timeblocks">
-  <%= link_to "New timeblock", new_timeblock_path %>
+  
   <div class="container">
-    <div class="timeline">
-      <% (0..23).each do |hour| %>
-      <div class="timeline-item">
-        <%= hour < 10 ? "0" : "" %><%= hour %>:00
-      </div>
-      <% end %>
-    </div>
+    <button class="create-timeblock-button">
+    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#F7C70F" class="bi bi-plus-lg" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
+    </svg>
+    <span><%= link_to "New Timeblock", new_timeblock_path, style:"text-decoration: none; color: #F7C70F" %> </span>
+  </button>
+    <div class="calender-container">
+        <div class="timeline">
+          <div class="timeline-hours-container">
+<div class="timeline-hours">
+          <% (0..23).each do |hour| %>
+            <div class="timeline-item">
+              <%= hour < 10 ? "0" : "" %><%= hour %>:00
+            </div>
+          <% end %>
+          </div>
+          </div>
+          
+
+          <div class="lines-container">
+            <% (0..47).each do |halfhour|%>
+              <div class="small-line" style="width:<%= halfhour % 2 == 0 ? 100: 50 %>%; margin-left:<%= halfhour % 2 == 0 ? 0: 8 %>px"></div>
+            <% end%>
+          </div>
+        </div>
+      
+      
 
     <div class="content">
       <div class="weekdays-navbar-container">
-        <p>Mon</p>
-        <p>Tue</p>
-        <p>Wed</p>
-        <p>Thu</p>
-        <p>Fri</p>
-        <p>Sat</p>
-        <p>Sun</p>
+        
+        <% (0..6).each do |day| %>
+          <div class="weekday-item">
+            <p style="color: #1E4EB0">Mon</p>
+            <div class="date-active-container">
+              <div class="date-active">22</div>
+            </div>
+          </div>
+
+        <% end %>
       </div>
 
       <div class="grid-container">
@@ -92,7 +176,7 @@
           <% @timeblocks.each do |timeblock| %>
           <% if timeblock.user == current_user %>
           <% if timeblock.repeatOnDay == day || timeblock.dailyRepeat == true %>
-          <div style="margin-top: <%= calculate_margin_to_baseline(@smallestValueInArray, timeblock.taskStartingTime) %>px">
+          <div style="margin-top: <%= calculate_margin_to_baseline(@smallestValueInArray, timeblock.taskStartingTime) %>px; width: 100%">
             <%= render timeblock %>
           </div>
           <% else %>
@@ -104,5 +188,7 @@
         <% end %>
       </div>
     </div>
+    </div>
+    
   </div>
 </div>
