--- a/app/views/timeblocks/_timeblock.html.erb
+++ b/app/views/timeblocks/_timeblock.html.erb
@@ -4,9 +4,17 @@
       width: calc((100% - 32px * 6) / 7);
       position: absolute;
       margin-left: 15px; 
-      background-color: #F7C70F;
+      background-color: #FF6600;
       align: center;
+      color: white; 
       border-radius: 8px;
+    }
+    .journey-container {
+      background-color: orange;
+      color: black;
+      border-radius: 8px;
+      margin-top: 8px;
+      padding-left: 8px;
     }
   </style>
 </head>
@@ -21,6 +29,12 @@
       <div style="padding: 4px 12px; height: <%= calculate_height(timeblock.taskStartingTime, timeblock.taskEndingTime) %>px; margin-top: <%= calculate_margin_to_baseline(@smallestValueInArray, timeblock.taskStartingTime) %>">
         <%= timeblock.task_name %> 
         <p style="margin: 0"><%= timeblock.taskStartingTime %> - <%= timeblock.taskEndingTime %> </p>
+          <% timeblock.journeys.each do |journey| %>
+            <div class="journey-container">
+              <p>becoming a <%= journey.title %> </p>
+            </div>
+          <% end %>
+
       </div>
     <% end %>
   </div>
