--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Home#index</h1>
-<p class="text-red-600">Find me in app/views/home/index.html.erb</p>
+<% if user_signed_in? %>
+    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+
+<% end %>
+
