--- a/app/views/home/todays_mission.html.erb
+++ b/app/views/home/todays_mission.html.erb
@@ -1,7 +1,10 @@
 <style>
   .main-container {
-    margin: 0px 128px;
-  }
+    margin: 0 128px;
+    display: grid;
+    grid-template-columns: 1fr 2fr; /* Left side nimmt 2/3, right side 1/3 */
+    gap: 16px; /* Abstand zwischen den beiden Spalten */  }
+  
   .dot {
     height: 8px;
     width: 8px;
@@ -21,7 +24,6 @@
     padding-left: 16px; 
   }
   .todo-card {
-    width: 33%;
     padding: 8px 16px;
     border-radius: 8px;
     border: solid #ADA7C8 2px;
@@ -66,47 +68,73 @@
 .plus-svg{
   padding-left: 12px;
 }
+
+.left-of-at{
+  margin-top: 12px;
+  display: flex;
+  align-items: center;
+}
+.left-of-at-input-field{
+  border: solid 2px #ADA7C8;
+  border-radius: 999px;
+  height: 26px;
+  width: 100%;
+  margin-left: 8px;
+}
 </style>
 <h1>Todays Mission</h1>
+  <div class="main-container">
+    <div>
+      <% @timeblocks.each do |timeblock| %>
+        <% if (timeblock.repeatOnDay == @dayIndex || timeblock.dailyRepeat == true) && timeblock.user == current_user%>
+        <div class="left-side">
+          <div class="dot-and-time">
+            <div class="dot"></div>
+            <p><%= timeblock.taskStartingTime%> - <%= timeblock.taskEndingTime%></p>
+          </div>
 
-<% @timeblocks.each do |timeblock| %>
-<% if (timeblock.repeatOnDay == @dayIndex || timeblock.dailyRepeat == true) && timeblock.user == current_user%>
-    <div class="main-container">
-      <div>
-        <div class="dot-and-time">
-          <div class="dot"></div>
-          <p><%= timeblock.taskStartingTime%> - <%= timeblock.taskEndingTime%></p>
-        </div>
+          <div class="todo-card-container">
+            <div class="todo-card">
+              <p class="task-name"><%= timeblock.task_name %></p>
+                <div class="todo-now-container">
+                  <p class="todo-now"><span style="padding-left: 12px;">I need to do this </span></p>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="check-box" width="20" height="20" fill="#ADA7C8" viewBox="0 0 16 16">
+                      <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
+                    </svg>
+                </div>
 
-        <div class="todo-card-container">
-          <div class="todo-card">
-            <p class="task-name"><%= timeblock.task_name %> </p>
-              <div class="todo-now-container">
-                <p class="todo-now"><span style="padding-left: 12px;">I need to do this </span></p>
-                  <svg xmlns="http://www.w3.org/2000/svg" class="check-box" width="20" height="20" fill="#ADA7C8" viewBox="0 0 16 16">
-                    <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
+                <div class="left-of-at">
+
+                  <p style="flex-shrink: 0;">where i left of: </p>
+                  <input class="left-of-at-input-field">
+                </div>
+
+                <div class="add-new-task-container">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="plus-svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
                   </svg>
+                  <p><span style="padding-left: 4px; padding-right: 12px; ">Add new Task</span></p>
+                </div>
               </div>
-              <div class="add-new-task-container">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="plus-svg" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
-                </svg>
-                <p class=""><span style="padding-left: 4px; padding-right: 12px; ">Add new Task</span></p>
-                
-              </div>
-            </div>
           </div>
         </div>
-      </div>
-      
-      <div>
+        <% end %>
+      <% end %>
+    </div>
+
+    <div>
+      <% @timeblocks.each do |timeblock| %>
         <% timeblock.journeys.each do |journey| %>
-            <div class="journey-container">
-              <p>becoming a <%= journey.reason %> </p>
-            </div>
+          <% if (timeblock.repeatOnDay == @dayIndex || timeblock.dailyRepeat == true) && timeblock.user == current_user%>
+
+          <div class="journey-container">
+            <p>becoming a <%= journey.title %> </p>
+          </div>
           <% end %>
-      </div>
+        <% end %> 
+      <% end %>
+    </div>
   </div>
-<% end %>
+
   
-<% end %>
+      
